bin/testsuite/tests/compiler/src/errors/compiler1145.swg
#global testerror "Err0583"

#[Swag.Compiler, Swag.Inline]
func toto()
{
    //@print(x)
}

func toto1()
{
    toto()
}
